# DFBU-Dotfiles-Backup-Utility

./: .gitignore  .mcp.json.backup-20260216  AGENTS.md  AGENTS.reviews.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DFBU-DotFiles-Backup-Utility.code-workspace  SECURITY.md  pyproject.toml
.circleci/: config.yml
.claude/rules/: global.md
.codex/: AGENTS.md
.github/ISSUE_TEMPLATE/: config.yml
.github/prompts/: release.prompt.md
.github/workflows/: ci.yml  release.yml
docs/: TROUBLESHOOTING.md  architecture.md  deployed.md  specs-plans.md
docs/handoff/: state.md
docs/handoff/bugs/: INDEX.md  _regen_index.py
docs/handoff/sessions/: 2026-04.md
docs/sessions/: 2026-04.md
