[project]
name = "dfbu"
version = "1.2.3"
description = "Dotfiles Backup Utility - A file backup and restoration utility"
authors = [
    {name = "Chris Purcell", email = "chris@l3digital.net"}
]
requires-python = ">=3.14"
keywords = ["dotfiles", "backup", "restore", "configuration", "linux", "desktop"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6>=6.6.0",
    "ruamel-yaml>=0.19.1",
    "tomli-w>=1.0.0",
]

[project.gui-scripts]
dfbu = "DFBU.dfbu_gui:main"

[project.urls]
Homepage = "https://github.com/L3DigitalNet/DFBU-DotFiles-Backup-Utility"
Repository = "https://github.com/L3DigitalNet/DFBU-DotFiles-Backup-Utility"
Issues = "https://github.com/L3DigitalNet/DFBU-DotFiles-Backup-Utility/issues"
Changelog = "https://github.com/L3DigitalNet/DFBU-DotFiles-Backup-Utility/blob/main/DFBU/docs/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DFBU"]

[tool.ruff]
# Target Python 3.14+ as specified in guidelines
target-version = "py314"
line-length = 88  # Black-compatible, reasonable for readability

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    ".agents",
    ".aider*",
]

[tool.ruff.lint]
# Enable comprehensive rule sets for strict PEP 8 compliance
select = [
    "E",      # pycodestyle errors (PEP 8)
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import organization)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "ANN",    # flake8-annotations (type hints everywhere)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "ANN401",  # Dynamically typed expressions (Any) - allow when necessary
    "PLR0913", # Too many arguments - let design dictate
    "PLR2004", # Magic value comparison - acceptable for common values
    "E501",    # Allow long lines (managed by formatter/documentation)
    "PLR0911", # Too many return statements can be acceptable
    "PLR0915", # Function too complex/too many statements allowed when pragmatic
    "N999",    # Module name DFBU is intentionally uppercase (project name)
    "PLR0912", # Too many branches - acceptable for complex orchestration logic
]

[tool.ruff.lint.per-file-ignores]
# Test files can have additional flexibility
"tests/**/*.py" = [
    "ANN",      # Type hints less critical in tests
    "PLR2004",  # Magic values acceptable in test data
    "S101",     # Assert usage (required for pytest)
    "PLC0415",  # Allow local imports within tests
    "RUF059",   # Allow unused unpacking in tests for readability
    "SIM",      # Simplification suggestions less critical in tests
]
"DFBU/tests/**/*.py" = [
    "ANN",
    "PLR2004",
    "S101",
    "PLC0415",
    "RUF059",
    "SIM",
    "PLW0108",  # Lambda wrappers acceptable in test signal connections
    "E731",     # Lambda assignments acceptable in tests
    "F841",     # Unused variables acceptable when testing side effects
    "PT011",    # Broad pytest.raises acceptable with exc_info assertions
    "PTH123",   # open() acceptable in tests
    "PT017",    # Assertion on exception acceptable with clear intent
    "PT018",    # Compound assertions acceptable when testing related conditions
]
"DFBU/tests/test_viewmodel_template.py" = [
    "ANN",      # Template file - relaxed type hints
    "SLF001",   # Template demonstrates private attribute access
    "F401",     # Template may have unused imports for demonstration
]
"DFBU/gui/backup_orchestrator.py" = [
    "E402",    # sys.path modification required before local imports
    "RET504",  # Unnecessary assignment before return - acceptable for clarity
]
"DFBU/gui/config_manager.py" = [
    "SIM102",  # Nested if adds clarity for exclusion logic
]
"DFBU/gui/restore_backup_manager.py" = [
    "PTH123",  # open() used with tomli_w.dump which expects file handle
]
"DFBU/gui/tooltip_manager.py" = [
    "RUF012",  # ClassVar annotation unnecessary for frozen tooltip dict
]
"DFBU/gui/viewmodel.py" = [
    "PLW0108", # Lambda wrappers needed to bridge signal.emit to callback
]
"DFBU/gui/designer/*_ui.py" = [
    "ALL",  # Auto-generated by Qt Designer - do not lint
]
"DFBU/gui/view.py" = [
    "N802",     # Qt requires CamelCase event handler names like closeEvent
    "PLC0415",  # Lazy import of html.escape in log methods is intentional
]

[tool.ruff.lint.isort]
# Organize imports per Python conventions
force-single-line = false
lines-after-imports = 2
known-first-party = ["dfbu", "gui"]

[tool.ruff.lint.mccabe]
# Enforce reasonable complexity (max 3 nesting levels per guidelines)
max-complexity = 10

[tool.ruff.lint.pyupgrade]
# Enforce modern Python 3.14+ syntax
keep-runtime-typing = false  # Use modern type hints (str | None instead of Optional[str])

[tool.ruff.format]
# Format settings
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
# pytest configuration per test.prompt.md guidelines
testpaths = ["DFBU/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=DFBU",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual components (fast, isolated)",
    "integration: Integration tests across components",
    "slow: Tests that take more than 1 second",
    "gui: Tests requiring GUI components and QApplication",
]

[tool.mypy]
# CONSERVATIVE TYPE CHECKING CONFIGURATION
# All strict options enabled to force rigorous type safety

# Python version
python_version = "3.14"

# --strict mode (enables all strict options)
strict = true

# Strict type checking options (explicit for clarity even though strict=true enables them)
disallow_any_unimported = true        # Disallow Any from unimported modules
disallow_any_expr = false             # Too restrictive - would break Qt code
disallow_any_decorated = true         # Disallow Any in decorated functions
disallow_any_explicit = false         # Allow explicit Any when needed
disallow_any_generics = true          # Require type parameters for generics
disallow_subclassing_any = true       # Disallow subclassing Any
disallow_untyped_calls = true         # Disallow calling untyped functions
disallow_untyped_defs = true          # Require type hints on all function definitions
disallow_incomplete_defs = true       # Require type hints on all parameters and returns
disallow_untyped_decorators = true    # Require typed decorators

# Optional value handling
no_implicit_optional = true           # Disallow implicit Optional (require explicit | None)
strict_optional = true                # Enable strict checking of Optional types

# Warning options
warn_redundant_casts = true           # Warn about unnecessary casts
warn_unused_ignores = true            # Warn about unnecessary type: ignore comments
warn_no_return = true                 # Warn about missing return statements
warn_return_any = true                # Warn about returning Any from typed functions
warn_unreachable = true               # Warn about unreachable code
warn_unused_configs = true            # Warn about unused mypy config options

# Error strictness
strict_equality = true                # Prohibit equality checks between incompatible types
strict_concatenate = true             # Strict checking for ParamSpec and Concatenate

# Type checking behavior
check_untyped_defs = true             # Type check bodies of untyped functions
implicit_reexport = false             # Require explicit re-export in __init__.py
local_partial_types = true            # Disallow mixing types in list comprehensions
no_implicit_reexport = true           # Require explicit __all__ or re-exports

# Cache and performance
cache_dir = ".mypy_cache"
incremental = true
sqlite_cache = true

# Error display
show_error_codes = true               # Show error codes for easier suppression when needed
show_column_numbers = true            # Show column numbers in error messages
show_error_context = true             # Show source code context in errors
pretty = true                          # Use prettier error formatting
color_output = true                    # Colorize error output
error_summary = true                   # Show error summary at end

# Module discovery
explicit_package_bases = true         # Use explicit package bases for module resolution
namespace_packages = true             # Support namespace packages
ignore_missing_imports = false        # Do not ignore missing imports (override per module)
mypy_path = "$MYPY_CONFIG_FILE_DIR/DFBU"  # Add DFBU to mypy search path
exclude = [
    "__main__\\.py$",                    # Avoid duplicate module with mypy_path
    "DFBU/gui/designer/.*_ui\\.py$",    # Auto-generated by pyside6-uic, not type-safe
]

[[tool.mypy.overrides]]
# External libraries without type stubs - ONLY allow missing imports for these
module = ["PySide6.*", "tomli_w", "ruamel.*"]
ignore_missing_imports = true
# Still require strict typing for our usage of these libraries
disallow_any_unimported = false
disallow_untyped_calls = false  # Qt methods may not have stubs

[[tool.mypy.overrides]]
# Test files - MINIMAL relaxation (still require most type checking)
module = ["DFBU.tests.*", "tests.*"]
# Allow untyped test functions only when using fixtures with complex signatures
disallow_untyped_defs = false
disallow_untyped_decorators = false  # pytest.mark.* and @Slot() decorators lose type info
disallow_any_decorated = false       # Decorated test functions become Any-typed
# Still require:
# - Type hints on complex test functions
# - No Any abuse
# - Proper return type hints where applicable
# Tests should still follow type safety principles

[tool.pyright]
# Pyright/Pylance configuration (mirrors mypy strict settings above)
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

# Exclude patterns matching mypy
exclude = ["**/__pycache__", ".venv", "build", "dist"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "pytest-mock>=3.0.0",
    "mypy>=1.19.1",
    "pyinstaller>=6.18.0",
    "ruff>=0.15.0",
    "black>=26.1.0",
    "pre-commit>=4.5.1",
    "pytest-timeout>=2.4.0",
]
